@startuml

title __IMPL's Class Diagram__\n

  namespace  {
    namespace om.emotorstore.service {
      namespace impl {
        class com.emotorstore.service.impl.CartItemServiceImpl {
            + addCartItem()
            + getCartItemByProductId()
            + removeAllCartItems()
            + removeCartItem()
        }
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.service {
      namespace impl {
        class com.emotorstore.service.impl.CartServiceImpl {
            + getCartById()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.service {
      namespace impl {
        class com.emotorstore.service.impl.CustomerOrderServiceImpl {
            + addCustomerOrder()
            + getCustomerOrderGrandTotal()
        }
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.service {
      namespace impl {
        class com.emotorstore.service.impl.CustomerServiceImpl {
            + addCustomer()
            + getAllCustomers()
            + getCustomerById()
            + getCustomerByUsername()
        }
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.service {
      namespace impl {
        class com.emotorstore.service.impl.ProductServiceImpl {
            + addProduct()
            + deleteProduct()
            + editProduct()
            + getProductById()
            + getProductList()
        }
      }
    }
  }
  

  com.emotorstore.service.impl.CartItemServiceImpl .up.|> com.emotorstore.service.CartItemService
  com.emotorstore.service.impl.CartItemServiceImpl o-- com.emotorstore.dao.CartItemDao : cartItemDao
  com.emotorstore.service.impl.CartServiceImpl .up.|> com.emotorstore.service.CartService
  com.emotorstore.service.impl.CartServiceImpl o-- com.emotorstore.dao.CartDao : cartDao
  com.emotorstore.service.impl.CustomerOrderServiceImpl .up.|> com.emotorstore.service.CustomerOrderService
  com.emotorstore.service.impl.CustomerOrderServiceImpl o-- com.emotorstore.service.CartService : cartService
  com.emotorstore.service.impl.CustomerOrderServiceImpl o-- com.emotorstore.dao.CustomerOrderDao : customerOrderDao
  com.emotorstore.service.impl.CustomerServiceImpl .up.|> com.emotorstore.service.CustomerService
  com.emotorstore.service.impl.CustomerServiceImpl o-- com.emotorstore.dao.CustomerDao : customerDao
  com.emotorstore.service.impl.ProductServiceImpl .up.|> com.emotorstore.service.ProductService
  com.emotorstore.service.impl.ProductServiceImpl o-- com.emotorstore.dao.ProductDao : productDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
